plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.graduate'
version = '0.0.1-SNAPSHOT'
description = 'novel-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // PGVECTOR support (Spring 3.4+ auto-detects vector)
    implementation 'com.pgvector:pgvector:0.1.6'                 // vector Java mapping
    implementation 'org.springframework.data:spring-data-jdbc'   // required for vector mapping

    // MAPSTRUCT
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Jsoup
    implementation 'org.jsoup:jsoup:1.21.2'

    // Cloudinary
    implementation 'com.cloudinary:cloudinary-http44:1.36.0'

    // Spring dotenv for loading .env files
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'
    // OpenAPI/Swagger for API documentation (compatible with Spring Boot 3.5.x)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // EPUB Library
    implementation('com.positiondev.epublib:epublib-core:3.1') {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}


